Agrego los textos

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="hidromiel, miel, bebidadevikingos, vikingos, fermentacion, bebidas">
-    <meta name="description" content="Freyr Hidromiel es una empresa familiar que se dedica a fabricar hidromiel artesanal, con miel de Cordoba">
+    <meta name="description"
+        content="Freyr Hidromiel es una empresa familiar que se dedica a fabricar hidromiel artesanal, con miel de Cordoba">
     <link rel="shortcut icon" href="./Imagenes/logo.jpg">
     <title>Freyr Hidromiel Web</title>
     <!--Google Font-->
@@ -165,26 +166,18 @@
             <div class="cajaNotas">
                 <section id='nosotros' class="nosotros">
                     <h2>Nosotros</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore
-                        et
-                        dolore
-                        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                        ex
-                        ea
-                        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
-                        eu
-                        fugiat
-                        nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                        deserunt
-                        mollit
-                        anim id est laborum.</p>
+                    <p>Freyr nacio desde la idea de traer algo diferente a la actualidad, siendo la Hidromiel una bebida
+                        que no esta muy presente en el mercado cotidiano.
+                    </p>
                     </br>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum molestiae optio sapiente nesciunt.
-                        Aut
-                        sit
-                        dolorum consequuntur fugit illum nulla maiores, quis quod rem dicta ducimus. Incidunt est dolor
-                        unde!
+                    <p>Vimos una oportunidad de traer nuevamente al mercado este producto tan noble y perfecto en sus
+                        sabore. Cada uno de nosotros aporta su mejor version para dar un producto 100% ARTESANAL y de
+                        CALIDAD.
+
+
+                    </p>
+
+                    <p>La receta que usamos es fiel a la manera original de su produccion sumando las medidas necesarias de seguridad e higiene para mantener la calidad del producto final en optimas condiciones.
                     </p>
                 </section>
 
@@ -196,24 +189,22 @@
                     <div class="produccionCaja">
                         <div>
 
-                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque est libero veritatis
-                                expedita
-                                alias
-                                velit
-                                ipsam at dolor culpa ipsa, pariatur soluta neque quis numquam praesentium cum doloremque
-                                sed
-                                minus!
+                            <p>La preparación de hidromiel consiste en fermentar el azúcar que contiene la miel. Son las
+                                levaduras las que convierten los azúcares fermentables en alcohol durante la etapa de
+                                fermentación . El grado de alcohol dependerá de la proporción de agua y miel.
                             </p>
                             </br>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores qui facere, expedita
-                                delectus
-                                eveniet
-                                ullam
-                                atque at? Pariatur laudantium est amet aperiam debitis, facilis velit consequuntur,
-                                illum
-                                deserunt
-                                voluptate
-                                magni?</p>
+                            <p>El grado alcohólico de la hidromiel normalmente ronda entre el 10% y 12%, pero hay
+                                hidromieles que llegan incluso hasta el 18% de ABV. También dependerá del tipo de
+                                levaduras que se utilicen en la fabricación. Se pueden usar levaduras de fermentación
+                                alta, tanto de cerveza como de vino, aunque hay algunas levaduras especiales exclusivas
+                                para hidromiel, que potencian los sabores florales y especiados de la miel que se usa en
+                                la preparación.
+
+                                Las cuentas suelen ser así, por cada 250 gramos de miel en 10 litros de agua se genera
+                                1% de alcohol. Aunque también puedes usar la calculadora de MeadMakr para calcular las
+                                cantidades de miel y levadura que necesitas, según los litros que quieras fabricar y el
+                                tipo de miel que uses.</p>
                         </div>
                         <div>
                             <h3> El paso a paso en video</h3>
