--- a/pages/produccion.html
+++ b/pages/produccion.html
@@ -61,20 +61,10 @@
             <div class="produccionCaja">
                 <div>
 
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque est libero veritatis expedita
-                        alias
-                        velit
-                        ipsam at dolor culpa ipsa, pariatur soluta neque quis numquam praesentium cum doloremque sed
-                        minus!
+                    <p>La preparación de hidromiel consiste en fermentar el azúcar que contiene la miel. Son las levaduras las que convierten los azúcares fermentables en alcohol durante la etapa de fermentación . El grado de alcohol dependerá de la proporción de agua y miel.
                     </p>
                     </br>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores qui facere, expedita delectus
-                        eveniet
-                        ullam
-                        atque at? Pariatur laudantium est amet aperiam debitis, facilis velit consequuntur, illum
-                        deserunt
-                        voluptate
-                        magni?</p>
+                    <p>El grado alcohólico de la hidromiel normalmente ronda entre el 10% y 12%, pero hay hidromieles que llegan incluso hasta el 18% de ABV. También dependerá del tipo de levaduras que se utilicen en la fabricación. Se pueden usar levaduras de fermentación alta, tanto de cerveza como de vino, aunque hay algunas levaduras especiales exclusivas para hidromiel, que potencian los sabores florales y especiados de la miel que se usa en la preparación. Las cuentas suelen ser así, por cada 250 gramos de miel en 10 litros de agua se genera 1% de alcohol. Aunque también puedes usar la calculadora de MeadMakr para calcular las cantidades de miel y levadura que necesitas, según los litros que quieras fabricar y el tipo de miel que uses.</p>
                 </div>
                 <div>
                     <h3> El paso a paso en video</h3>
@@ -99,7 +89,7 @@
                 <img src="../Imagenes/cafe.png" class="card-img-top" alt="cafecito app">
                 <div class="card-body">
                     <h5 class="card-title">Un cafecito para Freyr</h5>
-                    <p class="card-text">Podes regalarnos un cafecito y vas a estar ayudando a nuetro proyecto a crecer!
+                    <p class="card-text">Podes regalarnos un cafecito y vas a estar ayudando a nuestro proyecto a crecer!
                     </p>
                     <a href="https://cafecito.app/freyrhidromiel" class="btn btn-primary">Invitar un cafecito</a>
                 </div>
