--- a/pages/Nosotros.html
+++ b/pages/Nosotros.html
@@ -57,15 +57,20 @@
 
     <section id='nosotros' class="nosotros">
         <h2>Nosotros</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-            commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-            anim id est laborum.</p>
-        </br>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum molestiae optio sapiente nesciunt. Aut sit
-            dolorum consequuntur fugit illum nulla maiores, quis quod rem dicta ducimus. Incidunt est dolor unde!</p>
-    </section>
+                    <p>Freyr nacio desde la idea de traer algo diferente a la actualidad, siendo la Hidromiel una bebida
+                        que no esta muy presente en el mercado cotidiano.
+                    </p>
+                    </br>
+                    <p>Vimos una oportunidad de traer nuevamente al mercado este producto tan noble y perfecto en sus
+                        sabore. Cada uno de nosotros aporta su mejor version para dar un producto 100% ARTESANAL y de
+                        CALIDAD.
+
+
+                    </p>
+
+                    <p>La receta que usamos es fiel a la manera original de su produccion sumando las medidas necesarias de seguridad e higiene para mantener la calidad del producto final en optimas condiciones.
+                    </p>
+                </section>
 
 
     <section>
