--- a/pages/Fotos.html
+++ b/pages/Fotos.html
@@ -55,7 +55,7 @@
 
     </header>
 
-    <section>
+    <section class="encuadreTexto">
         <h2>Fotos</h2>
 
         <div class="cajaFotosGrid">
