--- a/pages/Historia.html
+++ b/pages/Historia.html
@@ -54,7 +54,7 @@
     </header>
 
     <main>
-        <section id="historia" class="historia">
+        <section id="historia" class="encuadreTexto">
 
 
             <h2>Historia</h2>
@@ -85,7 +85,7 @@
     </main>
 
 
-    <section>
+    <section class="encuadreTexto">
 
         <div class="nosotrosCard">
 
