--- a/pages/Nosotros.html
+++ b/pages/Nosotros.html
@@ -55,7 +55,7 @@
     </header>
 
 
-    <section id='nosotros' class="nosotros">
+    <section id='nosotros' class="encuadreTexto">
         <h2>Nosotros</h2>
                     <p>Freyr nacio desde la idea de traer algo diferente a la actualidad, siendo la Hidromiel una bebida
                         que no esta muy presente en el mercado cotidiano.
