--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -53,7 +53,7 @@
 
 
     <div class="fondoNuevo">
-        <section class="contacto">
+        <section class="encuadreTexto">
 
             <h3> Contactanos </h3>
 
