--- a/pages/produccion.html
+++ b/pages/produccion.html
@@ -56,7 +56,7 @@
     </header>
 
     <div class="fondoNuevo">
-        <section id='produccion' class="produccion">
+        <section id='produccion' class="encuadreTexto">
             <h2>Produccion</h2>
             <div class="produccionCaja">
                 <div>
