--- a/index.html
+++ b/index.html
@@ -107,126 +107,65 @@
 
         </section>
 
+        <section class="comienzoPrimero">
+
+            <div>
+                <h3> !!Bienvenidos al reino de Freyr!! </h3>
+                <p>Este es un primer paso a conocer una bebida llena de historias y leyendas, que paso de continente en
+                    continente para dejar una marca unica y abrir el camino para descubrir nuevos sabores. </p>
+                <p>La cultura Nordica esta llena de Dioses y heroes de Leyenda pero todos tenian un punto en comun, a la
+                    hora de festejar o prepararse para la batalla su bebida de predileccion era la Hidromiel! </p>
+            </div>
 
 
         </section>
 
 
 
-        <div class="fondoCompleto">
-            <main>
+        <seccion>
 
-                <div class="cajaNotas">
-                    <section id="historia" class="historia">
+            <h3>¿Quien es Freyr?</h3>
 
+            <div class="presentacionCubo">
 
-                        <h2>Historia</h2>
-                        <p>La hidromiel es la bebida alcohólica más antigua de la humanidad. Los historiadores
-                            antropólogos
-                            datan la
-                            primera prueba directa de su consumo en torno al 8000 a.C a partir de restos arqueológicos
-                            de
-                            cerámicas
-                            y
-                            cuernos con restos de levaduras y polen, encontrados en China y Alemania.</p>
+                <div>
 
+                    <p>Tambien conocido como el hijo de Njörðr y el hermano de Freyja. Era el dios de la lluvia, del sol
+                        naciente y de la fertilidad. Un dato curiosos es que la Hidromiel tambien se asocia directamente
+                        con
+                        la
+                        fertilidad a la hora del casamiento entre vikingos, de aqui sale la llamada LUNA DE MIEL. Los
+                        novios
+                        luegos del casamiento (en su noche de bodas) bebian juntos hidromiel y esto era una costumbre
+                        para
+                        mejorar la fertilidad. </br>
 
-                        <p>Se considera que es la primera de las bebidas alcohólicas que consumió el ser humano y se
-                            cree
-                            que es
-                            precursora de la cerveza.3​ El hidromiel es una bebida histórica cuya preparación se
-                            fundamenta
-                            en
-                            la
-                            fermentación de una mezcla de agua y miel, que alcanza cierta graduación alcohólica que
-                            varía
-                            según
-                            la
-                            relación de miel/agua y la tolerancia de las levaduras al alcohol. Su uso fue fuertemente
-                            difundido
-                            por
-                            los pueblos de la antigüedad.En Europa, lo hicieron y lo bebieron
-                            los griegos, romanos, celtas, sajones y vikingos.
-                            Para
-                            los mayas era una bebida sagrada utilizada en ceremonias religiosas y además consideraban
-                            que
-                            tenía
-                            propiedades medicinales, específicamente para tratar infecciones estomacales y utilizada
-                            como laxante.
-                            En
-                            algunas de estas culturas era usado para elogiar a héroes y escogidos.
-                        </p>
-
-
-                    </section>
-
-                </div>
-            </main>
-
-            <div class="cajaNotas">
-                <section id='nosotros' class="nosotros">
-                    <h2>Nosotros</h2>
-                    <p>Freyr nacio desde la idea de traer algo diferente a la actualidad, siendo la Hidromiel una bebida
-                        que no esta muy presente en el mercado cotidiano.
-                    </p>
-                    </br>
-                    <p>Vimos una oportunidad de traer nuevamente al mercado este producto tan noble y perfecto en sus
-                        sabore. Cada uno de nosotros aporta su mejor version para dar un producto 100% ARTESANAL y de
-                        CALIDAD.
-
+                        Por este motivo decidimos tomar el nombre de Freyr y traer nuevamente a sus manos una bebida con
+                        tanta
+                        historia.</p>
 
                     </p>
 
-                    <p>La receta que usamos es fiel a la manera original de su produccion sumando las medidas necesarias de seguridad e higiene para mantener la calidad del producto final en optimas condiciones.
-                    </p>
-                </section>
-
-            </div>
-
-            <div class="cajaNotas">
-                <section id='produccion' class="produccion">
-                    <h2>Produccion</h2>
-                    <div class="produccionCaja">
-                        <div>
-
-                            <p>La preparación de hidromiel consiste en fermentar el azúcar que contiene la miel. Son las
-                                levaduras las que convierten los azúcares fermentables en alcohol durante la etapa de
-                                fermentación . El grado de alcohol dependerá de la proporción de agua y miel.
-                            </p>
-                            </br>
-                            <p>El grado alcohólico de la hidromiel normalmente ronda entre el 10% y 12%, pero hay
-                                hidromieles que llegan incluso hasta el 18% de ABV. También dependerá del tipo de
-                                levaduras que se utilicen en la fabricación. Se pueden usar levaduras de fermentación
-                                alta, tanto de cerveza como de vino, aunque hay algunas levaduras especiales exclusivas
-                                para hidromiel, que potencian los sabores florales y especiados de la miel que se usa en
-                                la preparación.
-
-                                Las cuentas suelen ser así, por cada 250 gramos de miel en 10 litros de agua se genera
-                                1% de alcohol. Aunque también puedes usar la calculadora de MeadMakr para calcular las
-                                cantidades de miel y levadura que necesitas, según los litros que quieras fabricar y el
-                                tipo de miel que uses.</p>
-                        </div>
-                        <div>
-                            <h3> El paso a paso en video</h3>
-
-                            <div class="videoAdaptado">
-
-                                <iframe width="460" height="215" src="https://www.youtube.com/embed/QwO8vQNec20"
-                                    title="YouTube video player" frameborder="0"
-                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                    allowfullscreen></iframe>
-
-                            </div>
-
-                        </div>
+                    <div class="botonElegido">
+                        <a href="./pages/Historia.html">¿Queres saber mas? ingresa AQUI</a>
                     </div>
 
 
-                </section>
+
+
+
+                </div>
+
+
+
+                <div class="img">
+                    <img src=".//Imagenes/freyrDios.jpg " alt="Dios Freyr">
+                </div>
+
 
             </div>
 
-        </div>
+        </seccion>
 
     </div>
 
