Correcion card y formulario

--- a/pages/Fotos.html
+++ b/pages/Fotos.html
@@ -12,8 +12,10 @@
     <title>Fotos de Producción</title>
     <!--Google Font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700&family=Cinzel:wght@400;500;600&family=Merriweather:ital,wght@0,400;1,300;1,400&family=Tenor+Sans&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700&family=Cinzel:wght@400;500;600&family=Merriweather:ital,wght@0,400;1,300;1,400&family=Tenor+Sans&display=swap"
+        rel="stylesheet">
 
     <!--Mi BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -95,19 +97,39 @@
 
         <h3> No te olvides de pedir la tuya!</h3>
 
-        <div class="card" style="width: 18rem;">
-            <img src="../Imagenes/botella.jpg" class="card-img-top" alt="botella">
-            <div class="card-body">
-                <h5 class="card-title">Meet Tradicional</h5>
-                <p class="card-text">Hidromiel tradicional 500ml </p>
-                <a href="https://www.instagram.com/freyrhidromiel/" class="btn btn-primary">Comprar ahora!</a>
+        <div class="container">
+            <div class="row g-3">
+
+                <div class="col-12 col-md-6 col-lg-4">
+
+                    <div class="card" style="width: 18rem;">
+                        <img src="../Imagenes/botella.jpg" class="card-img-top" alt="botella">
+                        <div class="card-body">
+                            <h5 class="card-title">Meet Tradicional</h5>
+                            <p class="card-text">Hidromiel tradicional 500ml </p>
+                            <a href="https://www.instagram.com/freyrhidromiel/" class="btn btn-primary">Comprar
+                                ahora!</a>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="card" style="width: 18rem;">
+                        <img src="../Imagenes/cafe.png" class="card-img-top" alt="botella">
+                        <div class="card-body">
+                            <h5 class="card-title">Un cafecito para Freyr</h5>
+                            <p class="card-text">Podes dejar tu aporte y ayudarnos a seguir creciendo </p>
+                            <a href="https://cafecito.app/freyrhidromiel" class="btn btn-primary">Invitame un cafecito!</a>
+                        </div>
+                    </div>
+
+                </div>
+
             </div>
+
+
         </div>
-
-
-
-
-
 
 
     </aside>
