--- a/pages/Nosotros.html
+++ b/pages/Nosotros.html
@@ -79,9 +79,9 @@
 
             <h3> El Equipo Freyr</h3>
             <div class="container">
-                <div class="row">
+                <div class="row g-3">
 
-                    <div class="col-4">
+                    <div class="col-12 col-md-6 col-lg-4">
                         <div class="card">
                             <img src="../Imagenes/hombre1.jpg" alt="Javierfundador" class="card-img-top">
                             <div class="card-body">
@@ -92,12 +92,12 @@
                         </div>
 
                     </div>
-                    <div class="col-4">
+                    <div class="col-12 col-md-6 col-lg-4">
                         <div class="card">
                             <img src="../Imagenes/hombre2.jpg" alt="TMarcelocompañero" class="card-img-top">
                             <div class="card-body">
                                 <h5 class="card-title">Agustin Villagran </h5>
-                                <p class="card-text">Agustin es la mano derecha de Javier, se encarga de la imagen de Freyr en las redes. Su motivacion y manejo para las situaciones dificiles lo hace una parte principal de des duo dinamico.</p>
+                                <p class="card-text">Agustin es la mano derecha de Javier, se encarga de la imagen de Freyr en las redes. Su motivacion y manejo para las situaciones dificiles lo hace una parte principal de este duo dinamico.</p>
                             </div>
 
                         </div>
