--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="hidromiel, miel, bebidadevikingos, vikingos, fermentacion, bebidas">
-    <meta name="description" content="Por este medio podes contactarte con nosotros y pedir tu hidromiel, tenes todos nuestros medios de comunicacion">
+    <meta name="description"
+        content="Por este medio podes contactarte con nosotros y pedir tu hidromiel, tenes todos nuestros medios de comunicacion">
 
     <link rel="shortcut icon" href="../Imagenes/logo.jpg">
     <title>Contacto</title>
@@ -141,35 +142,27 @@
 
             <div class="cajaNotas">
 
-                <div class="formularioCuerpo">
-
-                    <h4>Si estas interesado tener nuestras ultimas noticias por email registrate en este formulario</h4>
-
-                    <section id="contacto" class="contacto">
+                <div class="formularioCuerpo" >
 
 
 
-                        <form action="/" method="post">
-                            <fieldset>
-                                <legend>Formulario de Suscripcion</legend>
-
-
-                                <label for="nombre">Nombre</label>
-                                <input id="nombre" type="text" placeholder="Ingrese su nombre">
-
-                                <label for="email">Email</label>
-                                <input id="email" type="email" required placeholder="ejemplo@gmail.com">
-
-                                <label for="consulta">Consulta</label>
-                                <input id="consulta" type="text">
+                    <section>
 
 
 
+                        <form action="/">
+                            <h2 class="contacto">Si estas interesado tener nuestras ultimas noticias por email registrate en este
+                                formulario</h2>
 
-                                <input type="submit" value="Enviar Formulario">
-                                <input type="reset" value="Resetear Formulario">
 
-                            </fieldset>
+
+                            <input type="text" name="Nombre" placeholder="Nombre">
+                            <input type="text" name="Correo" placeholder="Correo">
+                            <input type="text" name="Teléfono" placeholder="Teléfono">
+                            <input type="button" value="Enviar" id="boton">
+
+
+
 
 
                         </form>
