--- a/pages/Historia.html
+++ b/pages/Historia.html
@@ -91,9 +91,9 @@
 
             <h3> Algunos de los Dioses relacionados con la Meet</h3>
             <div class="container">
-                <div class="row">
+                <div class="row g-3">
 
-                    <div class="col-4">
+                    <div class="col-12 col-md-6 col-lg-4">
                         <div class="card">
                             <img src="../Imagenes/freyrDios.jpg" alt="DiosFreyr" class="card-img-top">
                             <div class="card-body">
@@ -107,7 +107,7 @@
                         </div>
 
                     </div>
-                    <div class="col-4">
+                    <div class="col-12 col-md-6 col-lg-4">
                         <div class="card">
                             <img src="../Imagenes/Thor.jpg" alt="Thordios" class="card-img-top">
                             <div class="card-body">
