--- a/index.html
+++ b/index.html
@@ -126,46 +126,48 @@
 
             <h3>¿Quien es Freyr?</h3>
 
-            <div class="presentacionCubo">
-
-                <div>
-
-                    <p>Tambien conocido como el hijo de Njörðr y el hermano de Freyja. Era el dios de la lluvia, del sol
-                        naciente y de la fertilidad. Un dato curiosos es que la Hidromiel tambien se asocia directamente
-                        con
-                        la
-                        fertilidad a la hora del casamiento entre vikingos, de aqui sale la llamada LUNA DE MIEL. Los
-                        novios
-                        luegos del casamiento (en su noche de bodas) bebian juntos hidromiel y esto era una costumbre
-                        para
-                        mejorar la fertilidad. </br>
-
-                        Por este motivo decidimos tomar el nombre de Freyr y traer nuevamente a sus manos una bebida con
-                        tanta
-                        historia.</p>
-
-                    </p>
-
-                    <div class="botonElegido">
-                        <a href="./pages/Historia.html">¿Queres saber mas? ingresa AQUI</a>
-                    </div>
+            <div class="encuadreTexto">
 
 
 
+                <p>También conocido como el hijo de Njörðr y el hermano de Freyja. Era el dios de la lluvia, del sol
+                    naciente y de la fertilidad. Un dato curiosos es que la Hidromiel también se asocia directamente
+                    con
+                    la
+                    fertilidad a la hora del casamiento entre vikingos, de aquí sale la llamada LUNA DE MIEL. Los
+                    novios
+                    luego del casamiento (en su noche de bodas) bebían juntos hidromiel y esto era una costumbre
+                    para
+                    mejorar la fertilidad. </br>
 
+                    Por este motivo decidimos tomar el nombre de Freyr y traer nuevamente a sus manos una bebida con
+                    tanta
+                    historia.</p>
 
+                </p>
+
+                <div class="botonElegido">
+                    <a href="./pages/Historia.html">¿Queres saber más? ingresa AQUÍ</a>
                 </div>
 
 
 
-                <div class="img">
-                    <img src=".//Imagenes/freyrDios.jpg " alt="Dios Freyr">
-                </div>
+
+
+
+
+
+
+
 
 
             </div>
 
         </seccion>
+
+
+
+        
 
     </div>
 
