--- a/pages/Nosotros.html
+++ b/pages/Nosotros.html
@@ -57,12 +57,12 @@
 
     <section id='nosotros' class="encuadreTexto">
         <h2>Nosotros</h2>
-                    <p>Freyr nacio desde la idea de traer algo diferente a la actualidad, siendo la Hidromiel una bebida
-                        que no esta muy presente en el mercado cotidiano.
+                    <p>Freyr nació desde la idea de traer algo diferente a la actualidad, siendo la Hidromiel una bebida
+                        que no está muy presente en el mercado cotidiano.
                     </p>
                     </br>
                     <p>Vimos una oportunidad de traer nuevamente al mercado este producto tan noble y perfecto en sus
-                        sabore. Cada uno de nosotros aporta su mejor version para dar un producto 100% ARTESANAL y de
+                        sabore. Cada uno de nosotros aporta su mejor versión para dar un producto 100% ARTESANAL y de
                         CALIDAD.
 
 
