--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -71,7 +71,7 @@
                         <div class="accordion-body">
                             <div class="datosContacto">
                                 <i class="fas fa-phone-square">
-                                    <p>Telefono: +54 3512075102</p>
+                                    <p>Teléfono: +54 3512075102</p>
                                 </i>
                             </div>
                         </div>
