Correccion Final Entraga

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <img id='logo' src="./Imagenes/logochico.jpg" alt="Logo de marca"></a>
 
         </div>
-        <h1>Freyr Hidromiel</h1>
+        
 
 
         <nav>
@@ -121,86 +121,86 @@
         </section>
 
 
+        <div class="encuadreTexto encuadreTextoIndex">
+            <seccion>
 
-        <seccion>
+                <h3>¿Quien es Freyr?</h3>
 
-            <h3>¿Quien es Freyr?</h3>
-
-            <div class="encuadreTexto">
+                <div>
 
 
 
-                <p>También conocido como el hijo de Njörðr y el hermano de Freyja. Era el dios de la lluvia, del sol
-                    naciente y de la fertilidad. Un dato curiosos es que la Hidromiel también se asocia directamente
-                    con
-                    la
-                    fertilidad a la hora del casamiento entre vikingos, de aquí sale la llamada LUNA DE MIEL. Los
-                    novios
-                    luego del casamiento (en su noche de bodas) bebían juntos hidromiel y esto era una costumbre
-                    para
-                    mejorar la fertilidad. </br>
+                    <p>También conocido como el hijo de Njörðr y el hermano de Freyja. Era el dios de la lluvia, del sol
+                        naciente y de la fertilidad. Un dato curiosos es que la Hidromiel también se asocia directamente
+                        con
+                        la
+                        fertilidad a la hora del casamiento entre vikingos, de aquí sale la llamada LUNA DE MIEL. Los
+                        novios
+                        luego del casamiento (en su noche de bodas) bebían juntos hidromiel y esto era una costumbre
+                        para
+                        mejorar la fertilidad. </br>
 
-                    Por este motivo decidimos tomar el nombre de Freyr y traer nuevamente a sus manos una bebida con
-                    tanta
-                    historia.</p>
+                        Por este motivo decidimos tomar el nombre de Freyr y traer nuevamente a sus manos una bebida con
+                        tanta
+                        historia.</p>
 
-                </p>
+                    </p>
 
-                <div class="botonElegido">
-                    <a href="./pages/Historia.html">¿Queres saber más? ingresa AQUÍ</a>
+                    <div class="botonElegido">
+                        <a href="./pages/Historia.html">¿Queres saber más? ingresa AQUÍ</a>
+                    </div>
+
+
+
+
+
+
+
+
+
+
+
+
                 </div>
 
+            </seccion>
 
 
 
 
 
+        </div>
+
+        <footer>
 
 
+            <div class="contenedorFooter">
+                <h4> Contactanos </h4>
+            </div>
+
+            <div class="redesSociales">
+                <a href="facebook.com/javier.emanuel.gaitan/">
+                    <i class="fab fa-facebook"></i> </a>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-telegram"></i>
+                <a href="https://www.instagram.com/freyrhidromiel/">
+                    <i class="fab fa-instagram"></i>
+                </a>
+            </div>
 
 
-
+            <div class="contenedorFooter">
+                <p class="copy">Freyr Hidromiel 2021 Copyright © Todos los derechos reservados</p>
 
             </div>
 
-        </seccion>
+        </footer>
 
 
-
-        
-
-    </div>
-
-    <footer>
-
-
-        <div class="contenedorFooter">
-            <h4> Contactanos </h4>
-        </div>
-
-        <div class="redesSociales">
-            <a href="facebook.com/javier.emanuel.gaitan/">
-                <i class="fab fa-facebook"></i> </a>
-            <i class="fab fa-twitter"></i>
-            <i class="fab fa-telegram"></i>
-            <a href="https://www.instagram.com/freyrhidromiel/">
-                <i class="fab fa-instagram"></i>
-            </a>
-        </div>
-
-
-        <div class="contenedorfooter">
-            <p class="copy">Freyr Hidromiel 2021 Copyright © Todos los derechos reservados</p>
-
-        </div>
-
-    </footer>
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/7cf6221d6a.js" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
+        <script src="https://kit.fontawesome.com/7cf6221d6a.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
