--- a/pages/Fotos.html
+++ b/pages/Fotos.html
@@ -31,7 +31,7 @@
             <img src="../Imagenes/logochico.jpg" alt="Logo de marca">
 
         </a>
-        <h1>Freyr Hidromiel</h1>
+        
         <nav>
             <!--LISTO DESORDENADA-->
 
@@ -97,7 +97,7 @@
 
         <h3> No te olvides de pedir la tuya!</h3>
 
-        <div class="container">
+        <div class="container containerCards">
             <div class="row g-3">
 
                 <div class="col-12 col-md-6 col-lg-4">
@@ -106,7 +106,7 @@
                         <img src="../Imagenes/botella.jpg" class="card-img-top" alt="botella">
                         <div class="card-body">
                             <h5 class="card-title">Meet Tradicional</h5>
-                            <p class="card-text">Hidromiel tradicional 500ml </p>
+                            <p class="card-text">Hidromiel tradicional 500ml  </p>
                             <a href="https://www.instagram.com/freyrhidromiel/" class="btn btn-primary">Comprar
                                 ahora!</a>
                         </div>
@@ -116,11 +116,11 @@
 
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="card" style="width: 18rem;">
-                        <img src="../Imagenes/cafe.png" class="card-img-top" alt="botella">
+                        <img src="../Imagenes/cafecitonuevo.png" class="card-img-top" alt="botella">
                         <div class="card-body">
                             <h5 class="card-title">Un cafecito para Freyr</h5>
-                            <p class="card-text">Podes dejar tu aporte y ayudarnos a seguir creciendo </p>
-                            <a href="https://cafecito.app/freyrhidromiel" class="btn btn-primary">Invitame un cafecito!</a>
+                            <p class="card-text">Podes dejar tu aporte por acá </p>
+                            <a href="https://cafecito.app/freyrhidromiel" class="btn btn-primary">Invitame un café!</a>
                         </div>
                     </div>
 
@@ -156,7 +156,7 @@
         </div>
 
 
-        <div class="contenedorfooter">
+        <div class="contenedorFooter">
             <p class="copy">Freyr Hidromiel 2021 Copyright © Todos los derechos reservados</p>
 
         </div>
