--- a/pages/produccion.html
+++ b/pages/produccion.html
@@ -29,7 +29,7 @@
             <img src="../Imagenes/logochico.jpg" alt="Logo de marca">
 
         </a>
-        <h1>Freyr Hidromiel</h1>
+        
         <nav>
             <!--LISTO DESORDENADA-->
 
@@ -102,7 +102,7 @@
         </div>
 
 
-        <div class="contenedorfooter">
+        <div class="contenedorFooter">
             <p class="copy">Freyr Hidromiel 2021 Copyright © Todos los derechos reservados</p>
 
         </div>
