--- a/pages/Historia.html
+++ b/pages/Historia.html
@@ -6,13 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="hidromiel, miel, bebidadevikingos, vikingos, fermentacion, bebidas">
-    <meta name="description" content="Aca te podes enterar un poco de la historia que posee la hidromiel desde sus origenes">
+    <meta name="description"
+        content="Aca te podes enterar un poco de la historia que posee la hidromiel desde sus origenes">
     <link rel="shortcut icon" href="../Imagenes/logo.jpg">
     <title>Historia</title>
     <!--Google Font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700&family=Cinzel:wght@400;500;600&family=Merriweather:ital,wght@0,400;1,300;1,400&family=Tenor+Sans&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700&family=Cinzel:wght@400;500;600&family=Merriweather:ital,wght@0,400;1,300;1,400&family=Tenor+Sans&display=swap"
+        rel="stylesheet">
 
     <!--Mi BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -28,7 +31,7 @@
             <img src="../Imagenes/logochico.jpg" alt="Logo de marca">
 
         </a>
-        <h1>Freyr Hidromiel</h1>
+
         <nav>
             <!--LISTO DESORDENADA-->
 
@@ -90,7 +93,7 @@
         <div class="nosotrosCard">
 
             <h3> Algunos de los Dioses relacionados con la Meet</h3>
-            <div class="container">
+            <div class="container containerCards">
                 <div class="row g-3">
 
                     <div class="col-12 col-md-6 col-lg-4">
@@ -151,7 +154,7 @@
         </div>
 
 
-        <div class="contenedorfooter">
+        <div class="contenedorFooter">
             <p class="copy">Freyr Hidromiel 2021 Copyright © Todos los derechos reservados</p>
 
         </div>
