--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -32,7 +32,7 @@
             <img src="../Imagenes/logochico.jpg" alt="Logo de marca">
 
         </a>
-        <h1>Freyr Hidromiel</h1>
+       
         <nav>
             <!--LISTO DESORDENADA-->
 
@@ -195,7 +195,7 @@
         </div>
 
 
-        <div class="contenedorfooter">
+        <div class="contenedorFooter">
             <p class="copy">Freyr Hidromiel 2021 Copyright © Todos los derechos reservados</p>
 
         </div>
